--- a/wp-content/themes/ashman/assets/scss/site/_masthead.scss
+++ b/wp-content/themes/ashman/assets/scss/site/_masthead.scss
@@ -126,7 +126,6 @@
   }
   .fa {
     font-size: larger;
-    line-height: 0;
     &.fa-money {
       color: palette(green);
     }
